--- a/k8s-deploy/manifest.yml
+++ b/k8s-deploy/manifest.yml
@@ -26,12 +26,6 @@ spec:
         image: gzarba/desk-reservation-app:backend-go
         ports:
         - containerPort: 5001
-        readinessProbe:
-          httpGet:
-            path: /health
-            port: 5001
-          initialDelaySeconds: 5
-          periodSeconds: 5
 
 ---
 apiVersion: v1
@@ -70,3 +64,15 @@ spec:
         ports:
         - containerPort: 5432
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: postgres
+  labels:
+    app: postgres
+spec:
+  ports:
+    - port: 5432
+  selector:
+    app: postgresdb
