--- a/k8s-deploy/manifest.yml
+++ b/k8s-deploy/manifest.yml
@@ -24,6 +24,7 @@ spec:
       containers:
       - name: backend-go
         image: gzarba/desk-reservation-app:backend-go
+        imagePullPolicy: Always
         ports:
         - containerPort: 5001
 
