add argocd sync job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,6 +18,7 @@ jobs:
           curl -sSL -o argocd-linux-amd64 https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
           sudo install -m 555 argocd-linux-amd64 /usr/local/bin/argocd
           rm argocd-linux-amd64
-          echo ${ARGOCD_PASSWORD}
-          argocd login argocd-server.argocd.svc.cluster.local --insecure --username ${ARGOCD_USERNAME} --password ${ARGOCD_PASSWORD}
-          
+          argocd login argocd-server.argocd.svc.cluster.local --insecure --username  ${{ secrets.ARGOCD_USERNAME }} --password ${{ secrets.ARGOCD_PASSWORD }}
+          argocd app actions run "desk-reservation-app-backend-go" restart --kind Deployment |& tee response.txt
+          cat response.txt
+          if [ -s response.txt ]; then exit 1; fi
